module(
    name = "com_github_bcsgh_stl_to_ps",
    version = "0.0.1",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "com_github_bcsgh_build_test",
    version = "0.0.1",
)

bazel_dep(
    name = "com_github_bcsgh_parser_rules",
    version = "0.0.1",
)

bazel_dep(
    name = "eigen",
    version = "4.0.0-20241125.bcr.1"
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)

bazel_dep(
    name = "re2",
    version = "2024-07-02.bcr.1",
    repo_name = "com_googlesource_code_re2",
)
